fixed skill min-height on mobile

--- a/static/sass/_pattern_cards.scss
+++ b/static/sass/_pattern_cards.scss
@@ -53,7 +53,7 @@
     @extend %vf-card;
 
     margin-bottom: $spv-inner--large;
-    min-height: 10rem;
+    min-height: 8rem;
     position: relative;
 
     &:hover {
@@ -127,6 +127,11 @@
       &.is-empty {
         display: none;
       }
+    }
+  }
+  @media (min-width: $breakpoint-small) {
+    .p-card--game {
+      min-height: 10rem;
     }
   }
 }
